# vault

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/ui/: index.html  script.js  style.css
crypto/: Cargo.toml
crypto/src/: encryption.rs  hash.rs  lib.rs
server/: Cargo.toml
server-bin/: Cargo.toml
server-bin/src/: main.rs
server-lib/: Cargo.toml
server-lib/migrations/: 01_create_tables.sql
server-lib/src/: database.rs  error.rs  lib.rs  middleware.rs  model.rs  routers.rs  routes.rs  utils.rs
server-lib/src/routes/: model.rs  passwords.rs  users.rs
server/src/: main.rs  middleware.rs
server/src/routes/: notes.rs  passwords.rs  users.rs
