[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5" }
rand_core = { version = "0.6", features = ["getrandom"] }
aes-gcm = { version = "0.10"}
sha3 = { version = "0.10" }
