[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = { path = "../crypto" }

tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
axum = { version = "0.7", features = ["http1", "json", "form"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4", features = ["now"] }
rand = { version = "0.8" }
